--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/Weather.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>The Weather</title>
+    <title>CloudCast</title>
 </head>
 
 <body>
     <div class="weather-app">
         <div class="container">
-            <h1 class="brand">Weather</h1>
+            <h1 class="brand">CloudCast</h1>
             <div class="weather-container">
                 <h1 class="temp convert">16&#176</h1>
                 <div class="city-time">
